feat: 添加管理员自动修订轮次设置 | 0.1.0 | 2026-08-01 22:36
